1999-02-08  Laurent Pautet  <pautet@scapin.enst.fr>

	* Makefile.am, Makefile.in: Check that system.garlic.debug is
	the first garlic elaborated package.

	* s-garexc.adb: Add visibility on system.garlic.debug.

	* s-parint.adb: Move Delete_Termination_Sanity_File to the very
	last shutdown step.
	
	* s-ganobl.adb (C_Accept): When Thin.C_Accept fails and Errno is
	Eagain, try again later.

	* s-garfil.adb, s-garfil.ads, s-gafizi.adb, s-gafizi.ads,
 	s-garhea.adb: Remove a copy of stream element array.

1999-02-01  Samuel Tardieu  <sam@inf.enst.fr>

	* s-garuti.adb: Avoid recursion in "<" operator by converting
	arguments into Integers.

1999-01-31  unknown  <pautet@scapin.enst.fr>

	* s-garuti.adb: Define No_Version which is the initialized value
 	of a watcher and which can no longer be reached once this watcher
 	is used. Substitute Commit by Lookup. Add a function "<" for
 	Version_Id.

	* s-gartab.adb, s-gartcp.adb, s-garuti.ads, s-rpc.adb: Substitute
	Commit by Lookup.

1999-01-25  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-garnam.adb: Another enhancement for "localhost".

1999-01-22  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-gartcp.adb (Initialize): Do not use "localhost" directly
	but translate it into the offical name.

1999-01-12  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-garuti.adb: Fix unitialized level problem in
 	Adv_Mutex_Type. Fixes 0004-G02.

1998-12-29  Samuel Tardieu  <sam@inf.enst.fr>

	* s-gaphlo.ads, s-gaphlo.adb: Remove memory leaks by making
	Location_Type a controlled type. This type is used when connecting 
	to a new partition, so the penalty won't be unaffordable.

1998-12-28  Samuel Tardieu  <sam@inf.enst.fr>

	* s-gardeb.adb: Deallocate string returned by Getenv after use.

	* s-gastha.adb: Fix two obvious bugs found by code reading. Pool
	mutexes were allocated many times and deallocated many times.

1998-12-19  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-gardeb.adb, s-gardeb.ads: Change debugging facilities. Reduce